[gd_scene load_steps=11 format=2]

[ext_resource path="res://prefabs/Orba.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/Starticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Intro.gd" type="Script" id=3]
[ext_resource path="res://Kdam_Thmor_Pro/KdamThmorPro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://audio/intro.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0901961, 0.596078, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0941176, 0.588235, 0.611765, 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/OrbaText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "typewriter"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/OrbaText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 3 )

[node name="Starticles" parent="." instance=ExtResource( 2 )]
position = Vector2( 862, -653.36 )

[node name="Orba" parent="." instance=ExtResource( 1 )]
position = Vector2( 236, 62 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OrbaText" type="Label" parent="CanvasLayer"]
margin_left = 25.0
margin_top = 45.0
margin_right = 295.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
text = "can you help me?"
autowrap = true
percent_visible = 0.0

[node name="ButtonsControl" type="Control" parent="CanvasLayer"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 108.0
margin_right = 60.0
margin_bottom = 148.0

[node name="AgreeButton" type="Button" parent="CanvasLayer/ButtonsControl"]
margin_right = 100.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.317647, 0.164706, 0.164706, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "AGREE"

[node name="ExitButton" type="Button" parent="CanvasLayer/ButtonsControl"]
margin_left = 122.0
margin_right = 222.0
margin_bottom = 30.0
text = "EXIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/typewriter = SubResource( 3 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/ButtonsControl/AgreeButton" to="." method="_on_AgreeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonsControl/ExitButton" to="." method="_on_ExitButton_pressed"]
